Reviewed players and teams implementation

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -33,6 +33,7 @@
     "\n",
     "from postgres.PostgresToDataFrame import PostgresToDataframe\n",
     "from src.rankings.TeamsRanking import TeamsRanking\n",
+    "from src.rankings.PlayersRanking import PlayersRanking\n",
     "\n",
     "init_notebook_mode(all_interactive=True)"
    ]
@@ -61,7 +62,7 @@
    "source": [
     "ID_CHP = 'ligue_1'\n",
     "SEASON = '2023-2024'\n",
-    "SIDE = 'both'\n",
+    "SIDE = 'away'\n",
     "FIRST_WEEK = 1\n",
     "LAST_WEEK = 100\n",
     "\n",
@@ -82,8 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "teams_ranking = TeamsRanking(db)\n",
-    "truc = teams_ranking.build_ranking(ID_CHP, SEASON, SIDE, FIRST_WEEK, LAST_WEEK, N, ROUND)"
+    "teams_ranking = TeamsRanking(db).build_ranking(ID_CHP, SEASON, SIDE, FIRST_WEEK, LAST_WEEK, N, ROUND)"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show(truc.sort_values('xP', ascending=False), paging=False)"
+    "show(teams_ranking.sort_values('xP', ascending=False), paging=False)"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show(truc[['Matches', 'Club', 'Wins', 'Draws', 'Loses', 'Points', 'xP', 'Diff Points']].set_index('Club').loc['FC Lorient'], paging=False)"
+    "show(teams_ranking[['Matches', 'Club', 'Wins', 'Draws', 'Loses', 'Points', 'xP', 'Diff Points']].set_index('Club').loc['FC Lorient'], paging=False)"
    ]
   },
   {
@@ -117,16 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.execute_sql_file(\"sql/rankings/players.sql\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "players_ranking = db.df_from_query(\"select * from players_rankings(id_chp := 'ligue_1', id_season := '2023-2024', side := 'both');\").set_index(\"Ranking\")"
+    "players_ranking = PlayersRanking(db).build_ranking(ID_CHP, SEASON, SIDE, FIRST_WEEK, LAST_WEEK)"
    ]
   },
   {
