Optimised both rankings. Added compo, age, etc

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players_ranking"
+    "players_ranking.sort_values('Age', ascending=False)"
    ]
   },
   {
