Added try/expect. Added input/output types.

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -83,7 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "teams_ranking = TeamsRanking(db).build_ranking(ID_CHP, SEASON, SIDE, FIRST_WEEK, LAST_WEEK, N, ROUND)"
+    "teams_ranking = TeamsRanking(db)\n",
+    "t_ranking = teams_ranking.build_ranking(ID_CHP, SEASON, SIDE, FIRST_WEEK, LAST_WEEK, N, ROUND)"
    ]
   },
   {
@@ -92,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show(teams_ranking.sort_values('xP', ascending=False), paging=False)"
+    "show(t_ranking.sort_values('xP', ascending=False), paging=False)"
    ]
   },
   {
@@ -101,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show(teams_ranking[['Matches', 'Club', 'Wins', 'Draws', 'Loses', 'Points', 'xP', 'Diff Points']].set_index('Club').loc['FC Lorient'], paging=False)"
+    "show(t_ranking[['Matches', 'Club', 'Wins', 'Draws', 'Loses', 'Points', 'xP', 'Diff Points']].set_index('Club').loc['FC Lorient'], paging=False)"
    ]
   },
   {
@@ -117,7 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players_ranking = PlayersRanking(db).build_ranking(ID_CHP, SEASON, SIDE, FIRST_WEEK, LAST_WEEK)"
+    "players_ranking = PlayersRanking(db)\n",
+    "p_ranking = players_ranking.build_ranking(ID_CHP, SEASON, SIDE, FIRST_WEEK, LAST_WEEK)"
    ]
   },
   {
@@ -126,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players_ranking.sort_values('Age', ascending=False)"
+    "p_ranking"
    ]
   },
   {
