Started adding oppositions tables. Reviewed implementation of aggregated boolean cols.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -62,10 +62,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEAM = 'Stade Rennais FC'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teams_oppositions = TeamsOpposition(db)\n",
+    "t_oppositions = teams_oppositions.build_table(TEAM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_oppositions"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Player VS Teams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PLAYER = 'Amine Gouiri'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = PostgresToDataframe(ENV)\n",
+    "players_oppositions = PlayersOpposition(db)\n",
+    "p_oppositions = players_oppositions.build_table(PLAYER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_oppositions"
    ]
   },
   {
