Started implementing matrix function. Renamed PostgresToDataFrame.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "from itables import init_notebook_mode, show\n",
     "\n",
-    "from postgres.PostgresToDataFrame import PostgresToDataframe\n",
+    "from postgres.PostgresQuerying import PostgresQuerying\n",
     "from src.oppositions.PlayersOpposition import PlayersOpposition\n",
     "from src.oppositions.TeamsOpposition import TeamsOpposition\n",
     "\n",
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = PostgresToDataframe(ENV)"
+    "db = PostgresQuerying(ENV)"
    ]
   },
   {
@@ -55,10 +55,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ID_CHP = 'ligue_1'\n",
+    "SEASON = '2023-2024'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Team VS Teams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teams_oppositions = TeamsOpposition(db)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_teams = teams_oppositions.build_matrix(ID_CHP, SEASON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_teams"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Oppositions of a given team"
    ]
   },
   {
@@ -76,8 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "teams_oppositions = TeamsOpposition(db)\n",
-    "t_oppositions = teams_oppositions.build_table(TEAM)"
+    "t_oppositions = teams_oppositions.build_oppositions(TEAM)"
    ]
   },
   {
@@ -102,6 +152,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "players_oppositions = PlayersOpposition(db)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_players = players_oppositions.build_matrix(ID_CHP, SEASON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_players"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Oppositions of a given player"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "PLAYER = 'Amine Gouiri'"
    ]
   },
@@ -111,9 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = PostgresToDataframe(ENV)\n",
     "players_oppositions = PlayersOpposition(db)\n",
-    "p_oppositions = players_oppositions.build_table(PLAYER)"
+    "p_oppositions = players_oppositions.build_oppositions(PLAYER)"
    ]
   },
   {
