--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "from itables import init_notebook_mode, show\n",
     "\n",
-    "from postgres.PostgresToDataFrame import PostgresToDataframe\n",
+    "from postgres.PostgresQuerying import PostgresQuerying\n",
     "from src.rankings.TeamsRanking import TeamsRanking\n",
     "from src.rankings.PlayersRanking import PlayersRanking\n",
     "\n",
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = PostgresToDataframe(ENV)"
+    "db = PostgresQuerying(ENV)"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_ranking"
+    "p_ranking[p_ranking.Player == 'Rayan Cherki']"
    ]
   },
   {
