Continued implementing oppositions.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -30,6 +30,8 @@
    "outputs": [],
    "source": [
     "from itables import init_notebook_mode, show\n",
+    "from ipywidgets import interact, widgets\n",
+    "from datetime import datetime\n",
     "\n",
     "from postgres.PostgresQuerying import PostgresQuerying\n",
     "from src.oppositions.PlayersOpposition import PlayersOpposition\n",
@@ -60,6 +62,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "teams_oppositions = TeamsOpposition(db)\n",
+    "players_oppositions = PlayersOpposition(db)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1 Item x N Items Oppositions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ID_CHP = 'ligue_1'\n",
     "SEASON = '2023-2024'"
    ]
@@ -68,48 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Team VS Teams"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "teams_oppositions = TeamsOpposition(db)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_teams = teams_oppositions.build_matrix(ID_CHP, SEASON)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_teams"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Oppositions of a given team"
+    "#### Team x Teams"
    ]
   },
   {
@@ -127,15 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_oppositions = teams_oppositions.build_oppositions(TEAM)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "t_oppositions = teams_oppositions.build_oppositions(TEAM)\n",
     "t_oppositions"
    ]
   },
@@ -143,48 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Player VS Teams"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "players_oppositions = PlayersOpposition(db)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_players = players_oppositions.build_matrix(ID_CHP, SEASON)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_players"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Oppositions of a given player"
+    "#### Player x Teams"
    ]
   },
   {
@@ -202,8 +131,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players_oppositions = PlayersOpposition(db)\n",
-    "p_oppositions = players_oppositions.build_oppositions(PLAYER)"
+    "p_oppositions = players_oppositions.build_oppositions(PLAYER)\n",
+    "p_oppositions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrices"
    ]
   },
   {
@@ -212,7 +148,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_oppositions"
+    "chps = ['all', 'ligue_1', 'la_liga', 'premier_league', 'serie_a', 'fussball_bundesliga']\n",
+    "seasons = [\"all\"] + [f\"{season}-{season+1}\" for season in range(datetime.now().year-5, datetime.now().year)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Team x Teams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_stats = ['Matches', 'Wins', 'Draws', 'Loses', 'Goals For', 'Goals Against', 'Shots', 'Shots on Target', 'Yellow Cards', 'Incl. 2 Yellow Cards', 'Red Cards']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(\n",
+    "    teams_oppositions.build_matrix, \n",
+    "    stat=widgets.Dropdown(options=team_stats),\n",
+    "    id_chp=widgets.Dropdown(options=chps), \n",
+    "    season=widgets.Dropdown(options=seasons)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Player x Teams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_stats = ['Matches', 'Wins', 'Draws', 'Loses', 'Goals', 'Assists', 'Minutes', 'Shots', 'Shots on Target', 'Yellow Cards', 'Incl. 2 Yellow Cards', 'Red Cards']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(\n",
+    "    players_oppositions.build_matrix, \n",
+    "    stat=widgets.Dropdown(options=player_stats),\n",
+    "    id_chp=widgets.Dropdown(options=chps), \n",
+    "    season=widgets.Dropdown(options=seasons)\n",
+    ")"
    ]
   },
   {
