fix: totally reviwed teams rankings.

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ID_CHP: str = 'ligue_1'\n",
-    "SEASON: str = '2023-2024'\n",
+    "ID_CHP: str = 'premier_league'\n",
+    "SEASON: str = '2024-2025'\n",
     "SIDE: str = 'both'\n",
     "FIRST_WEEK: int = 1\n",
     "LAST_WEEK: int = 100\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show(t_ranking[['Matches', 'Club', 'Wins', 'Draws', 'Loses', 'Points', 'xP', 'Diff Points']].set_index('Club').loc['FC Lorient'], paging=False)"
+    "show(t_ranking[['Matches', 'Club', 'Wins', 'Draws', 'Loses', 'Points', 'xP', 'Diff Points']].set_index('Club').loc['Everton FC'], paging=False)"
    ]
   },
   {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_ranking[p_ranking.Player == 'Rayan Cherki']"
+    "p_ranking[p_ranking['Player'] == 'Kalvin Phillips']"
    ]
   },
   {
