fix: reviewed players ranking.

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -138,30 +138,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#teams_ranking = TeamsRanking(db)\n",
-    "#t_ranking = teams_ranking.build_ranking(ID_CHP, SEASON, FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND)"
+    "teams_ranking = TeamsRanking(db)\n",
+    "t_ranking = teams_ranking.build_ranking(ID_CHP, SEASON, FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#show(t_ranking.sort_values('Points', ascending=False), paging=False)"
+    "show(t_ranking.sort_values('Points', ascending=False), paging=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#show(t_ranking[['Matches', 'Club', 'Wins', 'Draws', 'Loses', 'Points', 'xP', 'Diff Points']].set_index('Club').loc['Everton FC'], paging=False)"
+    "show(t_ranking[['Matches', 'Club', 'Wins', 'Draws', 'Loses', 'Points', 'xP', 'Diff Points']].set_index('Club').loc['Everton FC'], paging=False)"
    ]
   },
   {
@@ -173,343 +173,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: ERREUR:  erreur de syntaxe sur ou près de « ) »\n",
-      "LINE 37:   ),\n",
-      "           ^\n",
-      "QUERY:  with selected_match as (\n",
-      "\t\t\tselect id, home_team, away_team, competition\n",
-      "\t\t\tfrom dwh_2024_2025.match\n",
-      "\t\t\twhere \n",
-      "\t\t\t\tcompetition = 'premier_league' \n",
-      "\t\t\t\tand length(week) <= 2 \n",
-      "\t\t\t\tand cast(week as int) between '1' and '100'\n",
-      "\t\t),\n",
-      "\t\tplayers_nationalities as (\n",
-      "\t\t\tselect\n",
-      "\t\t\t\tplayer,\n",
-      "\t\t\t\tarray_agg(distinct country) as Nationalities\n",
-      "\t\t\tfrom dwh_upper.player_nationality pn\n",
-      "\t\t\tgroup by player\n",
-      "\t\t),\n",
-      "\t\tplayers_compo as (\n",
-      "\t\t\tselect\n",
-      "\t\t\t\tm.id,\n",
-      "\t\t\t\tc.iplayer,\n",
-      "\t\t\t\tc.started,\n",
-      "\t\t\t\tcase \n",
-      "\t\t\t\t\twhen not c.started then 1\n",
-      "\t\t\t\t\telse 0\n",
-      "\t\t\t\tend as sub_in,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen e.player_out = c.player then 1\n",
-      "\t\t\t\t\telse 0\n",
-      "\t\t\t\tend as sub_out\n",
-      "\t\t\tfrom dwh_2024_2025.compo c\n",
-      "\t\t\tjoin selected_match m\n",
-      "\t\t\ton c.match = m.id\n",
-      "\t\t\tjoin player_main_stats pms\n",
-      "\t\t\ton c.id_match = pms.match and pms.player = c.player\n",
-      "\t\t\tleft join dwh_2024_2025.event e\n",
-      "\t\t\tleft join dwh_2024_2025.sub_event se\n",
-      "\t\t\ton m.id = e.match and c.id_club = e.team and c.player = se.player_out\n",
-      "\t\t),\n",
-      "\t\thome_stats as (\n",
-      "\t\t\tselect\n",
-      "\t\t\t\t1 as home_match,\n",
-      "\t\t\t\t0 as away_match,\n",
-      "\n",
-      "\t\t\t\tpms.player,\n",
-      "\n",
-      "\t\t\t\th.home_team as team,\n",
-      "\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen pms.position = 'gk' then 1 else 0\n",
-      "\t\t\t\tend as home_gk,\n",
-      "\t\t\t\t0 as away_gk,\n",
-      "\t\t\t\t\n",
-      "\t\t\t\tpms.nb_goals as home_goals,\n",
-      "\t\t\t\t0 as away_goals,\n",
-      "\t\t\t\tpms.nb_pens_scored as home_pens_made,\n",
-      "\t\t\t\t0 as away_pens_made,\n",
-      "\t\t\t\tpms.nb_assists as home_assists,\n",
-      "\t\t\t\t0 as away_assists,\n",
-      "\t\t\t\tpms.xg as home_xg,\n",
-      "\t\t\t\t0.0 as away_xg,\n",
-      "\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts.score = 0 then 1 else 0\n",
-      "\t\t\t\tend as home_clean_sheet,\n",
-      "\t\t\t\t0 as away_clean_sheet,\n",
-      "\n",
-      "\t\t\t\tpms.nb_cards_yellow as home_cards_yellow,\n",
-      "\t\t\t\t0 as away_cards_yellow,\n",
-      "\t\t\t\tpms.nb_cards_red + pms.nb_cards_second_yellow as home_cards_red,\n",
-      "\t\t\t\t0 as away_cards_red,\n",
-      "\t\t\t\tpms.nb_cards_second_yellow as home_cards_yellow_red,\n",
-      "\t\t\t\t0 as away_cards_yellow_red,\n",
-      "\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts.score > ts_away.score then 1 else 0\n",
-      "\t\t\t\tend as home_win,\n",
-      "\t\t\t\t0 as away_win,\n",
-      "\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts.score = ts_away.score then 1 else 0\n",
-      "\t\t\t\tend as home_draw,\n",
-      "\t\t\t\t0 as away_draw,\n",
-      "\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts.score < ts_away.score then 1 else 0\n",
-      "\t\t\t\tend as home_lose,\n",
-      "\t\t\t\t0 as away_lose,\n",
-      "\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts.captain = pms.player then 1 else 0\n",
-      "\t\t\t\tend as home_captain,\n",
-      "\t\t\t\t0 as away_captain,\n",
-      "\n",
-      "\t\t\t\tpms.nb_minutes as home_minutes,\n",
-      "\t\t\t\t0 as away_minutes,\n",
-      "\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen c.started then 1 else 0\n",
-      "\t\t\t\tend as home_started,\n",
-      "\t\t\t\t0 as away_started,\n",
-      "\t\t\t\t\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen not c.started then 1 else 0\n",
-      "\t\t\t\tend as home_sub_in,\n",
-      "\t\t\t\t0 as away_sub_in,\n",
-      "\t\t\t\t\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen se.player_out = c.player then 1 else 0\n",
-      "\t\t\t\tend as home_sub_out,\n",
-      "\t\t\t\t0 as away_sub_out\n",
-      "\t\t\tfrom (select * from dwh_2024_2025.player_main_stats where played_home) as pms\n",
-      "\t\t\tleft join selected_match as h\n",
-      "\t\t\ton pms.id_match = h.id\n",
-      "\t\t\tleft join (select id_match, id_team, id_captain from dwh_2024_2025.team_stats where played_home) as ts \n",
-      "\t\t\ton h.id = ts.match and h.team = ts.team\n",
-      "\t\t\tleft join (select id_match, id_team, id_captain from dwh_2024_2025.team_stats where not played_home) as ts_away\n",
-      "\t\t\ton h.id = ts_away.match and h.team = ts_away.team\n",
-      "\t\t\tleft join (select * from dwh_2024_2025.compo where played_home) as c\n",
-      "\t\t\ton h.id = c.match and pms.player = c.player\n",
-      "\t\t\tleft join (select * from dwh_2024_2025.event where played_home) as e\n",
-      "\t\t\ton h.id = e.match\n",
-      "\t\t\tleft join dwh_2024_2025.sub_event se\n",
-      "\t\t\tpms.player = se.player_out\n",
-      "\t\t),\n",
-      "\t\taway_stats as (\n",
-      "\t\t\tselect\n",
-      "\t\t\t\t0 as home_match,\n",
-      "\t\t\t\t1 as away_match,\n",
-      "\n",
-      "\t\t\t\tpms.player,\n",
-      "\n",
-      "\t\t\t\ta.away_team as team,\n",
-      "\n",
-      "\t\t\t\t0 as home_gk,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen pms.position = 'gk' then 1 else 0\n",
-      "\t\t\t\tend as away_gk,\n",
-      "\t\t\t\t\n",
-      "\t\t\t\t0 as home_goals,\n",
-      "\t\t\t\tpms.nb_goals as away_goals,\n",
-      "\t\t\t\t0 as home_pens_made,\n",
-      "\t\t\t\tpms.nb_pens_scored as away_pens_made,\n",
-      "\t\t\t\t0 as home_assists,\n",
-      "\t\t\t\tpms.nb_assists as away_assists,\n",
-      "\t\t\t\t0.0 as home_xg,\n",
-      "\t\t\t\tpms.xg as away_xg,\n",
-      "\n",
-      "\t\t\t\t0 as home_clean_sheet,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts.score = 0 then 1 else 0\n",
-      "\t\t\t\tend as away_clean_sheet,\n",
-      "\n",
-      "\t\t\t\t0 as home_cards_yellow,\n",
-      "\t\t\t\tpms.nb_cards_yellow as away_cards_yellow,\n",
-      "\t\t\t\t0 as home_cards_red,\n",
-      "\t\t\t\tpms.nb_cards_red + pms.nb_cards_second_yellow as away_cards_red,\n",
-      "\t\t\t\t0 as home_cards_yellow_red,\n",
-      "\t\t\t\tpms.nb_cards_yellow as away_cards_yellow_red,\n",
-      "\n",
-      "\t\t\t\t0 as home_win,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts_home.score > ts.score then 1 else 0\n",
-      "\t\t\t\tend as away_win,\n",
-      "\n",
-      "\t\t\t\t0 as home_draw,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts_home.score = ts.score then 1 else 0\n",
-      "\t\t\t\tend as away_draw,\n",
-      "\n",
-      "\t\t\t\t0 as home_lose,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts_home.score < ts.score then 1 else 0\n",
-      "\t\t\t\tend as away_lose,\n",
-      "\n",
-      "\t\t\t\t0 as home_captain,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen ts.captain = pms.player then 1 else 0\n",
-      "\t\t\t\tend as away_captain,\n",
-      "\n",
-      "\t\t\t\t0 as home_minutes,\n",
-      "\t\t\t\tpms.nb_minutes as away_minutes,\n",
-      "\n",
-      "\t\t\t\t0 as home_started,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen c.started then 1 else 0\n",
-      "\t\t\t\tend as away_started,\n",
-      "\t\t\t\t\n",
-      "\t\t\t\t0 as home_sub_in,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen not c.started then 1 else 0\n",
-      "\t\t\t\tend as away_sub_in,\n",
-      "\t\t\t\t\n",
-      "\t\t\t\t0 as home_sub_out,\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen se.player_out = c.player then 1 else 0\n",
-      "\t\t\t\tend as away_sub_out\n",
-      "\t\t\tfrom (select * from player_main_stats where not played_home) as pms\n",
-      "\t\t\tleft join selected_match as a\n",
-      "\t\t\ton pms.match = a.id\n",
-      "\t\t\tleft join (select match, team, captain, score from dwh_2024_2025.team_stats where not played_home) as ts \n",
-      "\t\t\ton a.id = ts.match and a.away_team = ts.team\n",
-      "\t\t\tleft join (select match, team, captain, score from dwh_2024_2025.team_stats where played_home) as ts_home\n",
-      "\t\t\ton h.id = ts.match and h.home_team = ts_home.team\n",
-      "\t\t\tleft join (select * from compo where not played_home) c\n",
-      "\t\t\ton a.id = c.match and pms.player = c.player\n",
-      "\t\t\tleft join (select * from dwh_2024_2025.event where not played home) as e\n",
-      "\t\t\ton a.id = e.match\n",
-      "\t\t\tleft join dwh_2024_2025.sub_event se\n",
-      "\t\t\ton pms.player = se.player_out\n",
-      "\t\t),\n",
-      "\t\tplayers_stats as (\n",
-      "\t\t\tselect\n",
-      "\t\t\t\tstats.player,\n",
-      "\t\t\t\tpn.Nationalities,\n",
-      "\n",
-      "\t\t\t\tcase\n",
-      "\t\t\t\t\twhen set_bigint_stat(sum(home_gk), sum(away_gk), side) > 0 then true\n",
-      "\t\t\t\t\telse false\n",
-      "\t\t\t\tend as GK,\n",
-      "\t\t\t\t\n",
-      "\t\t\t\tstring_agg(distinct c.complete_name, ', ') as Club,\n",
-      "\n",
-      "\t\t\t\tset_bigint_stat(sum(home_match), sum(away_match), side) as Matches,\n",
-      "\n",
-      "\t\t\t\tset_bigint_stat(sum(home_win), sum(away_win), side) as Wins,\n",
-      "\t\t\t\tset_bigint_stat(sum(home_draw), sum(away_draw), side) as Draws,\n",
-      "\t\t\t\tset_bigint_stat(sum(home_lose), sum(away_lose), side) as Loses,\n",
-      "\t\t\t\t\n",
-      "\t\t\t\tset_bigint_stat(sum(home_goals), sum(away_goals), side) as Goals,\n",
-      "\t\t\t\tset_bigint_stat(sum(home_pens_made), sum(away_pens_made), side) as Penalties,\n",
-      "\t\t\t\tset_bigint_stat(sum(home_assists), sum(away_assists), side) as Assists,\n",
-      "\n",
-      "\t\t\t\tset_numeric_stat(sum(home_xg)::numeric, sum(away_xg)::numeric, side) as xG,\n",
-      "\n",
-      "\t\t\t\tset_numeric_stat(sum(home_xg_assists)::numeric, sum(away_xg_assists)::numeric, side) as \"xG Assists\",\n",
-      "\n",
-      "\t\t\t\tset_bigint_stat(sum(home_clean_sheet), sum(away_clean_sheet), side) as \"Clean Sheets\",\n",
-      "\t\t\t\t\n",
-      "\t\t\t\tset_bigint_stat(sum(home_cards_yellow), sum(away_cards_yellow), side) as \"Yellow Cards\",\n",
-      "\t\t\t\tset_bigint_stat(sum(home_cards_red), sum(away_cards_red), side) as \"Red Cards\",\n",
-      "\t\t\t\tset_bigint_stat(sum(home_cards_yellow_red), sum(away_cards_yellow_red), side) as \"Incl. 2 Yellow Cards\",\n",
-      "\t\t\t\t\n",
-      "\t\t\t\tset_bigint_stat(sum(home_minutes), sum(away_minutes), side) as Minutes,\n",
-      "\n",
-      "\t\t\t\tset_bigint_stat(sum(home_captain), sum(away_captain), side) as Captain,\n",
-      "\n",
-      "\t\t\t\tset_bigint_stat(sum(home_started), sum(away_started), side) as Started,\n",
-      "\t\t\t\tset_bigint_stat(sum(home_sub_in), sum(away_sub_in), side) as \"Sub In\",\n",
-      "\t\t\t\tset_bigint_stat(sum(home_sub_out), sum(away_sub_out), side) as \"Sub Out\"\n",
-      "\t\t\t\t\n",
-      "\t\t\tfrom(\n",
-      "\t\t\t\tselect *\n",
-      "\t\t\t\tfrom home_stats\n",
-      "\t\t\t\tunion all\n",
-      "\t\t\t\tselect *\n",
-      "\t\t\t\tfrom away_stats\n",
-      "\t\t\t) as \"stats\"\n",
-      "\t\t\tjoin (select id, complete_name from dwh_upper.club) as c \n",
-      "\t\t\ton team = c.id\n",
-      "\t\t\tjoin players_nationalities pn\n",
-      "\t\t\ton stats.player = pn.player\n",
-      "\t\t\tgroup by stats.player, pn.Nationalities\n",
-      "\t\t)\n",
-      "\t\tselect \n",
-      "\t\t\tp.name as Player,\n",
-      "\n",
-      "\t\t\tEXTRACT(YEAR FROM age(current_date, date_birth))::bigint AS Age,\n",
-      "\n",
-      "\t\t\tp.height::bigint as Height,\n",
-      "\t\t\tp.weight::bigint as Weight,\n",
-      "\n",
-      "\t\t\tp.footed as Footed,\n",
-      "\t\t\t\n",
-      "\t\t\tps.Nationalities as Nationalities,\n",
-      "\n",
-      "\t\t\tps.GK,\n",
-      "\n",
-      "\t\t\tps.Club,\n",
-      "\n",
-      "\t\t\tps.Matches,\n",
-      "\n",
-      "\t\t\tps.Wins,\n",
-      "\t\t\tps.Draws,\n",
-      "\t\t\tps.Loses,\n",
-      "\n",
-      "\t\t\tps.Goals,\n",
-      "\t\t\tps.Penalties,\n",
-      "\t\t\tps.Assists,\n",
-      "\n",
-      "\t\t\tps.xG,\n",
-      "\t\t\tcase\n",
-      "\t\t\t\twhen ps.Matches <> 0 then\n",
-      "\t\t\t\t\tround(ps.xG / ps.Matches, 2)\n",
-      "\t\t\t\telse 0.0\n",
-      "\t\t\tend as \"xG/90\",\n",
-      "\n",
-      "\t\t\tps.\"xG Assists\",\n",
-      "\t\t\tcase\n",
-      "\t\t\t\twhen ps.Matches <> 0 then\n",
-      "\t\t\t\t\tround(ps.\"xG Assists\" / ps.Matches, 2)\n",
-      "\t\t\t\telse 0.0\n",
-      "\t\t\tend as \"xG Assists /90\",\n",
-      "\n",
-      "\t\t\tps.\"Clean Sheets\",\n",
-      "\n",
-      "\t\t\tps.\"Yellow Cards\",\n",
-      "\t\t\tps.\"Red Cards\",\n",
-      "\t\t\tps.\"Incl. 2 Yellow Cards\",\n",
-      "\n",
-      "\t\t\tps.Minutes,\n",
-      "\n",
-      "\t\t\tps.Captain,\n",
-      "\n",
-      "\t\t\tps.Started,\n",
-      "\t\t\tps.\"Sub In\",\n",
-      "\t\t\tps.\"Sub Out\n",
-      "\n",
-      "\t\tfrom players_stats ps\n",
-      "\t\tleft join dwh_upper.player p\n",
-      "\t\ton ps.player = p.id\n",
-      "CONTEXT:  fonction PL/pgSQL players_rankings(character varying,character varying,integer,integer,ranking_type), ligne 344 à RETURN QUERY\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "players_ranking = PlayersRanking(db)\n",
     "p_ranking = players_ranking.build_ranking(ID_CHP, SEASON, FIRST_WEEK, LAST_WEEK, SIDE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_ranking"
    ]
   },
   {
