fix: started reviewing players_x_teams.

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ID_CHP: str = 'premier_league'\n",
+    "ID_COMP: str = 'premier_league'\n",
     "SEASON: str = '2024-2025'\n",
     "SIDE: str = 'both'\n",
     "FIRST_WEEK: int = 1\n",
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "teams_ranking = TeamsRanking(db)\n",
-    "t_ranking = teams_ranking.build_ranking(ID_CHP, SEASON, FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND)"
+    "t_ranking = teams_ranking.build_ranking(ID_COMP, SEASON, FIRST_WEEK, LAST_WEEK, SIDE, N, ROUND)"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "players_ranking = PlayersRanking(db)\n",
-    "p_ranking = players_ranking.build_ranking(ID_CHP, SEASON, FIRST_WEEK, LAST_WEEK, SIDE)"
+    "p_ranking = players_ranking.build_ranking(ID_COMP, SEASON, FIRST_WEEK, LAST_WEEK, SIDE)"
    ]
   },
   {
